--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,8 @@
-<div>
-  <h1>Form Upload</h1>
+<div style="display: flex; align-items: center; justify-content: center; margin: 100px auto;">
+  <h1 >Form Upload</h1>
 
-  <form action="" method="post" enctype="multipart/form-data">
-    <input type="file" name="file" id="file" />
-    <input type="button" value="upload" />
+  <form action="/upload" method="post" enctype="multipart/form-data" style="margin: 30px;">
+    <input style="color: blue; border-bottom-style: solid;" type="file" name="file" id="file" />
+    <input style="color: blue;" type="submit" value="upload" />
   </form>
 </div>
